# moshi-jax

./: .gitignore  pyproject.toml
.github/: README.md
.github/workflows/: python.yml
moshi_jax/configs/: v0.py
moshi_jax/modules/: transformer.py
tests/modules/: test_transformer.py
