[project]
name = "moshi-jax"
version = "0.0.1"
description = "python template"
readme = ".github/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "flax>=0.9.0",
    "ml-collections>=1.0.0",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
	"ignore::UserWarning"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
